# ODI-final

./: .env.example  .gitignore  Caddyfile  docker-compose.yml
backend/: .dockerignore  Dockerfile  mypy.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/middleware/: __init__.py  csrf.py  honeypot.py  rate_limit.py
backend/app/models/: __init__.py  messages.py  users.py
backend/app/routers/: __init__.py  auth.py  dependencies.py  messages.py  users.py
backend/app/schemas/: __init__.py  messages.py  users.py
backend/app/services/: __init__.py  auth.py  crypto.py  email.py
frontend/: .dockerignore  .prettierignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/messages/: layout.tsx  page.tsx
frontend/app/register/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/components/: GenericHeader.tsx
frontend/components/forgot-password/: ResetPasswordForm.tsx  SubmittedForm.tsx
frontend/components/home/: Footer.tsx  Header.tsx  Main.tsx
frontend/components/login/: Header.tsx  LoginForm.tsx
frontend/components/messages/: Header.tsx  Inbox.tsx  MessageRow.tsx  MobileHeader.tsx  MobileSidebar.tsx  Sidebar.tsx
frontend/components/register/: Header.tsx  PasswordRequirement.tsx  RegisterForm.tsx  (+1 more)
frontend/contextAPI/: auth-context.tsx
frontend/lib/: api.ts  crypto.ts  indexeddb.ts
frontend/types/: interfaces.ts
frontend/utils/: utils.ts
(+29 files in other folders)
